--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="spacing_dp4">4dp</dimen>
+    <dimen name="spacing_dp8">8dp</dimen>
+    <dimen name="spacing_dp16">16dp</dimen>
 </resources>
