--- a/app/src/main/res/layout/fragment_meo.xml
+++ b/app/src/main/res/layout/fragment_meo.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <ImageView
+        android:src="@drawable/meo_chinh_dien"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        android:id="@+id/imgMeo"/>
 
 </RelativeLayout>
