--- a/app/src/main/res/layout/fragment_meo.xml
+++ b/app/src/main/res/layout/fragment_meo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<AbsoluteLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
@@ -7,8 +7,8 @@
     android:orientation="vertical">
     <ImageView
         android:src="@drawable/meo_chinh_dien"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/_70sdp"
+        android:layout_height="@dimen/_90sdp"
         android:id="@+id/imgMeo"/>
 
-</RelativeLayout>
+</AbsoluteLayout>
