add shop fragment

--- a/app/src/main/res/layout/fragment_meo.xml
+++ b/app/src/main/res/layout/fragment_meo.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <ImageView
+        android:layout_centerInParent="true"
         android:src="@drawable/meo_chinh_dien"
         android:layout_width="@dimen/_70sdp"
         android:layout_height="@dimen/_90sdp"
         android:id="@+id/imgMeo"/>
-
-</AbsoluteLayout>
+    <Button
+        android:id="@+id/btnShop"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"/>
+</RelativeLayout>
