--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".screen.main.MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -26,7 +27,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|right"
                 android:layout_marginRight="@dimen/spacing_dp16"
-                android:drawableLeft="@drawable/ic_menu_send"
                 android:drawablePadding="@dimen/spacing_dp8"
                 android:text="8"
                 android:textColor="@color/icons"
@@ -39,4 +39,4 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"/>
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
