--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -9,34 +9,69 @@
     android:elevation="8dp"
     >
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp">
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/content"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_gravity="center"
             android:layout_marginRight="8dp"
             android:scaleType="centerCrop"
             tool:background="@color/colorPrimaryDark"/>
 
-        <TextView
-            android:id="@+id/description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/content"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="4dp"
             android:layout_toEndOf="@+id/content"
-            android:ellipsize="end"
-            android:maxLines="4"
-            android:textColor="@color/secondary_text"
-            android:textSize="14sp"
-            tool:text=""/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="@dimen/spacing_dp2"
+                android:layout_toStartOf="@+id/thumbnail"
+                android:ellipsize="end"
+                android:textColor="@color/primary_text"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tool:text="Giá trị giao dịch"/>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/thumbnail"
+                android:ellipsize="end"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
+                tool:text="+ 10 cỏ"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="12sp"
+                    tool:text="an hour ago"/>
+            </RelativeLayout>
+
+
+        </LinearLayout>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
