--- a/app/src/main/res/layout/item_mail_viewholder.xml
+++ b/app/src/main/res/layout/item_mail_viewholder.xml
@@ -2,11 +2,19 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp">
     <ImageView
         android:src="@drawable/ic_item_rong"
         android:id="@+id/image"
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="150dp" />
+    <TextView
+        android:text="3 ngay truoc"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/image"
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
