--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -15,22 +15,21 @@
         android:layout_gravity="center_horizontal"
         android:padding="8dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/content"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:elevation="6dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginRight="8dp"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"
-            tool:background="@color/colorPrimaryDark"/>
+            tool:src="@color/colorPrimaryDark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:gravity="center_horizontal"
+            android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/content"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <TextView
@@ -43,10 +42,10 @@
                 android:textColor="@color/primary_text"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                tool:text="Giá trị giao dịch"/>
+                tool:text="Tùng xàm l"/>
 
             <TextView
-                android:id="@+id/description"
+                android:id="@+id/weed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -56,20 +55,16 @@
                 android:textSize="12sp"
                 tool:text="+ 10 cỏ"/>
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/travel"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:textColor="@color/secondary_text"
-                    android:textSize="12sp"
-                    tool:text="an hour ago"/>
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/thumbnail"
+                android:ellipsize="end"
+                android:textColor="@color/primary_text"
+                android:textSize="12sp"
+                tool:text="+ 10 cỏ"/>
 
 
         </LinearLayout>
