--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -19,17 +19,19 @@
             android:id="@+id/content"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="8dp"
             android:layout_centerVertical="true"
-            android:layout_gravity="center_horizontal"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="center"
+            android:layout_marginRight="8dp"
             android:scaleType="centerCrop"
             tool:background="@color/colorPrimaryDark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="4dp"
-            android:gravity="center_horizontal"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/content"
             android:orientation="vertical">
 
@@ -39,27 +41,16 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="@dimen/spacing_dp2"
+                android:layout_toStartOf="@+id/thumbnail"
                 android:ellipsize="end"
                 android:textColor="@color/primary_text"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 tool:text="Giá trị giao dịch"/>
 
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/thumbnail"
-                android:ellipsize="end"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12sp"
-                tool:text="+ 10 cỏ"/>
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
                 <TextView
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
