--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,23 +7,23 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Home"/>
+            android:title="Trang Chủ"/>
         <item
             android:id="@+id/nav_rate"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Rate app"/>
+            android:title="Đánh giá VP MeO"/>
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Share"/>
+            android:title="Chia sẻ"/>
         <item
             android:id="@+id/nav_feedback"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Feedback"/>
+            android:title="Phản hồi"/>
 
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Logout"/>
+            android:title="Đăng xuất"/>
     </group>
 </menu>
