--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/root"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/colorPrimary"
               android:gravity="center"
               android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/title"
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="VP MEO"
-        android:textSize="32sp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Ứng dụng hỗ trợ"
-        android:textSize="20sp"/>
+        android:layout_height="150dp"
+        android:src="@drawable/vp_bank_logo"/>
 
     <ProgressBar
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/logo"
         android:id="@+id/loading"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="40dp"/>
 
-</LinearLayout>
+</RelativeLayout>
