--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -17,7 +17,6 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/content"
-            android:elevation="6dp"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginRight="8dp"
@@ -68,6 +67,15 @@
 
 
         </LinearLayout>
+        <TextView
+            android:id="@+id/txtRank"
+            android:layout_marginRight="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textSize="30sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/onest"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
