--- a/app/src/main/res/layout/item_new.xml
+++ b/app/src/main/res/layout/item_new.xml
@@ -6,18 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="16dp"
-    >
+    android:elevation="16dp">
 
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp">
-        >
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            android:layout_gravity="center"
+            android:maxHeight="200dp"
+            android:scaleType="centerCrop"
+            tool:layout_height="match_parent"
+            />
         <TextView
+            android:layout_margin="8dp"
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,15 +33,6 @@
             tool:text="Quys sdd"
             />
 
-        <ImageView
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="320dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:maxHeight="200dp"
-            android:scaleType="centerCrop"
-            tool:layout_height="120dp"
-            />
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
